added some code to utilze printers.json

--- a/index2.html
+++ b/index2.html
@@ -36,25 +36,7 @@
 
 	<div class='container'>
 
-		<div id='locations'>
-
-			<div class='loc selected'>Amos Eaton</div>
-			<div class='loc'>CII</div>
-			<div class='loc'>Dorms</div>
-			<div class='loc'>Greene</div>
-			<div class='loc'>JEC</div>
-			<div class='loc'>Lally</div>
-			<div class='loc'>Library</div>
-			<div class='loc'>MRC</div>
-			<div class='loc'>Pittsburgh</div>
-			<div class='loc'>Sage Labs</div>
-			<div class='loc'>Troy</div>
-			<div class='loc'>Union</div>
-			<div class='loc'>VCC</div>
-			<div class='loc'>Walker</div>
-
-
-		</div><!--end locations-->
+		<div id='locations'></div><!--end locations-->
 
 		<div id='content'>
 
